November 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/DFXVideo: Added project file and necessary codes for
   building existing dfxvideo sources for Mac OS X. (NOT bug-free yet!!!)
 * dfxvideo/gpu.c: Made necessary changes for Mac OS X build.
 * dfxvideo/externals.h: Likewise.
 * macosx/plugins/HIDInput/HIDInput.xcodeproj/project.pbxproj: Use
   psemu_plugin_defs.h from libpcsxcore.
 * macosx/plugins/HIDInput/src/PlugPAD.c: Likewise.
 * macosx/plugins/CDDeviceInterface/CDDeviceInterfacePlugin.xcodeproj/
   project.pbxproj: Likewise.
 * macosx/plugins/CDDeviceInterface/src/PlugCD.c: Likewise.
 * macosx/plugins/HIDInput/src/PSEmu_Plugin_Defs.h: Removed.
 * macosx/plugins/CDDeviceInterface/src/PSEmu_Plugin_Defs.h: Removed.
 * macosx/PcsxController.m: Don't allow starting game when Preferences dialog
   box is opened. Don't allow opening the Preferences dialog when game is
   running.

November 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/PeopsSpu109: Removed.
 * macosx/plugins/DFSound: Added project file and necessary platform-dependant
   files for building existing dfsound sources for Mac OS X.
 * plugins/dfsound/stdafx.h: Made necessary changes for Mac OS X build.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/xa.c: Likewise.

October 31, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Declare thread controlling variable as volatile.
 * plugins/dfinput/pad.c: Likewise.
 * macosx/plugins/PeopsSpu109: Added SPU plugin for Mac OS X.

October 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Do not allow resizing for dialog boxes.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfinput/pad.h: Declare several variables as volatile.
 * plugins/dfinput/Makefile.am: Use $(SDL_CONFIG) instead of "sdl-config".

October 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>
